完善了 library的索引方法 增加了 查看quote_card的api 增加了 mini_info_card start_info_card
增加了 临时测试 api/test

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -19,7 +19,7 @@
 <div class="flex w-100">
     <div class="flex-container text-center justify-content-center">
         <div style="line-height: 96px">
-            <img src="{% static 'images/logo.svg' %}" style="width:32px">
+            <img src="{% static 'images/logo.svg' %}" style="width:32px; : rebeccapurple!important;">
         </div>
         <div style="padding-top:80px">
             <form class="pt-0" action='' method="post">
