--- a/static/css/public/quote/quote_card.css
+++ b/static/css/public/quote/quote_card.css
@@ -4,11 +4,6 @@
     padding: 15px;
     margin: 10px;
     border-radius: 5px;
-    transition: box-shadow 0.3s ease;
-}
-
-.info-card:hover {
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .d-none {
@@ -33,4 +28,8 @@
 #addToLibraryBtn, #removeFromLibraryBtn {
     width: 200px;
     margin: 0 auto;
+}
+
+.tag-setting {
+    cursor: pointer;
 }
