--- a/templates/public/left_bar.html
+++ b/templates/public/left_bar.html
@@ -74,12 +74,23 @@
 
         <!-- 其他内容部分 -->
         <div class="content flex-grow-1 px-2">
-            <button type='button' id="toggle-btn" class="w-100 btn btn-light d-flex p-2 side-button justify-content-start" onclick="PageNavigator('/library')"  data-tooltip="Library">
+            <button type='button' id="search-btn" class="w-100 btn btn-light d-flex p-2 side-button justify-content-start" onclick="PageNavigator('/search')"  data-tooltip="Search">
+                <span class="d-flex align-items-center" style="position: relative; left: 0px; top: 0px;">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="16">
+                        <path d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"/>
+                    </svg>
+                    <span class="explanations align-left ps-3">
+                        Search Quote
+                    </span>
+                </span>
+            </button>
+            <button type='button' id="library-btn" class="w-100 btn btn-light d-flex p-2 side-button justify-content-start" onclick="PageNavigator('/library')"  data-tooltip="Library">
                 <span class="d-flex align-items-center" style="position: relative; left: 0px; top: 0px;">
                     <svg data-testid="geist-icon" height="16" stroke-linejoin="round" viewBox="0 0 16 16" width="16" style="color: currentcolor;">
-                        <path fill-rule="evenodd" clip-rule="evenodd" d="M0 1H0.75H5C6.2267 1 7.31583 1.58901 8 2.49963C8.68417 1.58901 9.7733 1 11 1H15.25H16V1.75V13V13.75H15.25H10.7426C10.1459 13.75 9.57361 13.9871 9.15165 14.409L8.53033 15.0303H7.46967L6.84835 14.409C6.42639 13.9871 5.8541 13.75 5.25736 13.75H0.75H0V13V1.75V1ZM7.25 4.75C7.25 3.50736 6.24264 2.5 5 2.5H1.5V12.25H5.25736C5.96786 12.25 6.65758 12.4516 7.25 12.8232V4.75ZM8.75 12.8232V4.75C8.75 3.50736 9.75736 2.5 11 2.5H14.5V12.25H10.7426C10.0321 12.25 9.34242 12.4516 8.75 12.8232Z" fill="currentColor"></path></svg>                        <span class="explanations align-left ps-3">
-                        My Library
-                    </span>
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M0 1H0.75H5C6.2267 1 7.31583 1.58901 8 2.49963C8.68417 1.58901 9.7733 1 11 1H15.25H16V1.75V13V13.75H15.25H10.7426C10.1459 13.75 9.57361 13.9871 9.15165 14.409L8.53033 15.0303H7.46967L6.84835 14.409C6.42639 13.9871 5.8541 13.75 5.25736 13.75H0.75H0V13V1.75V1ZM7.25 4.75C7.25 3.50736 6.24264 2.5 5 2.5H1.5V12.25H5.25736C5.96786 12.25 6.65758 12.4516 7.25 12.8232V4.75ZM8.75 12.8232V4.75C8.75 3.50736 9.75736 2.5 11 2.5H14.5V12.25H10.7426C10.0321 12.25 9.34242 12.4516 8.75 12.8232Z" fill="currentColor"></path></svg>
+                        <span class="explanations align-left ps-3">
+                            My Library
+                        </span>
                 </span>
             </button>
         </div>
@@ -122,5 +133,12 @@
     <div class="toggle-sidebar button-column align-right">
         <button onclick="toggleSidebar()"></button>
     </div>
+    <script src="{% static 'js/public/left_bar.js' %}"></script>
+    <script>
+        var sidebarExpand = sessionStorage.getItem('sidebarExpand')
+        if (sidebarExpand === 'true') {
+            toggleSidebar()
+        }
+    </script>
     {% include 'public/user_card.html' %}
 </div>
