--- a/templates/test_api.html
+++ b/templates/test_api.html
@@ -44,8 +44,8 @@
                         <p id="modalQuoteText"></p>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-primary" id="addToLibraryBtn">Add to Library</button>
-                        <button type="button" class="btn btn-danger" id="removeFromLibraryBtn">Remove from Library</button>
+                        <button type="button" class="btn btn-primary" id="addToLibraryBtn">Add to my List</button>
+                        <button type="button" class="btn btn-danger" id="removeFromLibraryBtn">Remove from my List</button>
                     </div>
                 </div>
             </div>
