--- a/static/css/public/tag/tag_btn.css
+++ b/static/css/public/tag/tag_btn.css
@@ -1,10 +1,10 @@
 .tags {
     max-width: 700px;
-    overflow: auto;
+    /*overflow: auto;*/
     width: fit-content;
-    margin-left: 8px;
-    margin-bottom: 4px;
     height: 40px;
+    transition: width 0.3s ease; /* 宽度变化的平滑过渡效果 */
+    padding: 4px;
 }
 
 .tags:hover {
@@ -17,8 +17,8 @@
     border-radius: 5px;
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
-    max-width: 700px;
-    overflow-x: auto;
+    max-width: 100%;
+    overflow-x: scroll;
     /*height: 39px;*/
     cursor: default;
     padding: 8px
@@ -157,6 +157,8 @@
     padding-left: 4px;
     padding-right: 4px;
     padding-bottom: 4px;
+    max-height: 30vh;
+    overflow: auto;
 }
 
 .hint{
