--- a/templates/public/quote/popup_quote_card.html
+++ b/templates/public/quote/popup_quote_card.html
@@ -3,20 +3,20 @@
         <!-- 顶部栏 -->
         <div class="d-flex justify-content-between h-100" style="overflow-x: auto;">
             <!-- 左侧内容 -->
-            <div class="left-bar ps-2" style="height: 100%">
+            <div class="left-bar ps-2" style="height: 100%; width: 70vw; max-width: 80vw;">
                 <div id="quote-content" class="card-title h5 ps-2" style="text-align: left">Quote Title</div>
                 <small id="quote-time" class="text-muted" style="display: none">Quote Time Details</small>
-                <div id="tags" class="tags pe-0  d-flex align-items-center">
-                        <div>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="me-1 icon icon-tabler icons-tabler-outline icon-tabler-tag">
-                                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                                <path d="M7.5 7.5m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
-                                <path d="M3 6v5.172a2 2 0 0 0 .586 1.414l7.71 7.71a2.41 2.41 0 0 0 3.408 0l5.592 -5.592a2.41 2.41 0 0 0 0 -3.408l-7.71 -7.71a2 2 0 0 0 -1.414 -.586h-5.172a3 3 0 0 0 -3 3z" />
-                            </svg>
-                        </div>
-                        <div class="tag-container d-flex justify-content-between align-items-center">
-                        </div>
+                <div id="tags" class="tags pe-0 d-flex align-items-center">
+                    <div id="tag-svg">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="me-1 icon icon-tabler icons-tabler-outline icon-tabler-tag">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                            <path d="M7.5 7.5m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
+                            <path d="M3 6v5.172a2 2 0 0 0 .586 1.414l7.71 7.71a2.41 2.41 0 0 0 3.408 0l5.592 -5.592a2.41 2.41 0 0 0 0 -3.408l-7.71 -7.71a2 2 0 0 0 -1.414 -.586h-5.172a3 3 0 0 0 -3 3z" />
+                        </svg>
                     </div>
+                    <div class="tag-container d-flex justify-content-between align-items-center">
+                    </div>
+                </div>
 
                 <div id="film-video" class="film-video"></div>
 
@@ -25,8 +25,7 @@
                     </div>
                     <div class="d-flex align-items-center">
                         <div class="btn grey-background favorite-btn" data-quote-id="">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="20px" fill="gold" viewBox="-30 0 576 512"
-                                 class="favorite-icon" style="cursor: pointer!important;">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20px" fill="gold" viewBox="-30 0 576 512" class="favorite-icon" style="cursor: pointer!important;">
                                 <path d="M47.6 300.4L228.3 469.1c7.5 7 17.4 10.9 27.7 10.9s20.2-3.9 27.7-10.9L464.4 300.4c30.4-28.3 47.6-68 47.6-109.5v-5.8c0-69.9-50.5-129.5-119.4-141C347 36.5 300.6 51.4 268 84L256 96 244 84c-32.6-32.6-79-47.5-124.6-39.9C50.5 55.6 0 115.2 0 185.1v5.8c0 41.5 17.2 81.2 47.6 109.5z"/>
                             </svg>
                         </div>
@@ -35,7 +34,7 @@
                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M6.75 10C6.75 9.58579 7.08579 9.25 7.5 9.25H16.5C16.9142 9.25 17.25 9.58579 17.25 10C17.25 10.4142 16.9142 10.75 16.5 10.75H7.5C7.08579 10.75 6.75 10.4142 6.75 10Z"></path>
                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M6.75 14C6.75 13.5858 7.08579 13.25 7.5 13.25H13C13.4142 13.25 13.75 13.5858 13.75 14C13.75 14.4142 13.4142 14.75 13 14.75H7.5C7.08579 14.75 6.75 14.4142 6.75 14Z"></path>
                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M12 5.25C9.48998 5.25 7.29811 5.3777 5.75109 5.50315C4.79223 5.58091 4.05407 6.31053 3.96899 7.25687C3.85555 8.51874 3.75 10.1822 3.75 12C3.75 13.8178 3.85555 15.4813 3.96899 16.7431C4.05408 17.6895 4.79214 18.4191 5.75095 18.4968C7.17292 18.6122 9.14013 18.7294 11.3987 18.7476C11.951 18.752 12.3951 19.2033 12.3906 19.7556C12.3862 20.3079 11.9349 20.752 11.3826 20.7475C9.06584 20.7289 7.04905 20.6087 5.58929 20.4903C3.67182 20.3348 2.15034 18.8499 1.97703 16.9222C1.8597 15.6172 1.75 13.892 1.75 12C1.75 10.108 1.8597 8.38283 1.97703 7.07779C2.15034 5.15 3.67203 3.66518 5.58944 3.50969C7.17721 3.38094 9.42438 3.25 12 3.25C14.5759 3.25 16.8232 3.38096 18.411 3.50973C20.3281 3.6652 21.8497 5.14946 22.0231 7.07716C22.1127 8.07392 22.1977 9.31512 22.233 10.6888C22.2471 11.2409 21.811 11.6999 21.2589 11.7141C20.7068 11.7282 20.2478 11.2921 20.2336 10.74C20.1997 9.41683 20.1177 8.21901 20.0311 7.25626C19.946 6.31026 19.2081 5.58094 18.2494 5.50319C16.7023 5.37772 14.5103 5.25 12 5.25Z"></path>
-                                <path fill-rule="evenodd" clip-rule="evenodd" d="M18.2557 13.3102C19.0368 12.5292 20.3031 12.5292 21.0841 13.3102L22.4983 14.7244C23.2794 15.5055 23.2794 16.7718 22.4983 17.5528L18.5486 21.5026C18.1735 21.8777 17.6648 22.0884 17.1344 22.0884L15.0702 22.0884C14.3246 22.0884 13.7202 21.484 13.7202 20.7384V18.6742C13.7202 18.1437 13.9309 17.635 14.306 17.26L18.2557 13.3102ZM21.0841 16.1386L19.6699 14.7244L15.7202 18.6742L15.7202 20.0884L17.1344 20.0884L21.0841 16.1386Z"></path>
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M18.2557 13.3102C19.0368 12.5292 20.3031 12.5292 21.0841 13.3102L22.4983 14.7244C23.2794 15.5055 23.2794 16.7718 22.4983 17.5528L18.5486 21.5026C18.1735 21.8777 17.6648 22.0884 17.1344 22.0884L15.0702 22.0884C14.3246 22.0884 13.7202 21.484 13.7202 20.7384V18.6742C13.7202 18.1437 13.9309 17.635 14.306 17.26L18.2557 13.3102ZM21.0841 16.1386L19.6699 14.7244L15.7202 18.6742L15.7202 20.0884L17.1344 20.0884L21.0841 16.1386Z"></path>
                             </svg>
                             <div class="ms-1 mt-1">
                                 0 analysis
@@ -50,7 +49,7 @@
                 </div>
             </div>
             <!-- 右侧内容 -->
-            <div class="right-bar" style="height: 100%">
+            <div class="right-bar justify-content-between" style="height: 100%; width: 30vw">
                 <div id="dialog-container" class="dialog-container">
                     <div id="dialog-load-before" class="hint text-center" style="cursor:pointer">Load More</div>
                     <div id="dialog-body"></div>
