--- a/templates/public/quote/stander_quote_card.html
+++ b/templates/public/quote/stander_quote_card.html
@@ -4,10 +4,10 @@
             <!-- 顶部栏 -->
             <div class="d-flex justify-content-between align-items-center">
                 <!-- 左侧内容 -->
-                <div class="top-left-bar ps-2">
+                <div class="top-left-bar" style="padding-left: 12px">
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="tags pe-0  d-flex align-items-center">
-                            <div>
+                            <div id="tag-svg">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="me-1 icon icon-tabler icons-tabler-outline icon-tabler-tag">
                                     <path stroke="none" d="M0 0h24v24H0z" fill="none" />
                                     <path d="M7.5 7.5m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
